# BremsstrahlungHighEnergySpetrum

./: .gitignore  CMakeLists.txt  README.md  bremsstrahlung_functions.h  bremsstrahlung_sigma.cpp
include/: GALPROP.h  Tsai74.h  bremsstrahlung_functions.h  bremsstrahlung_sigma.h  cgs.h  lossrate.h
src/: GALPROP.cpp  Tsai74.cpp  bremsstrahlung_functions.cpp  bremsstrahlung_sigma.cpp  lossrate.cpp  main.cpp
